--- a/charts/paas-kuzzle/Chart.yaml
+++ b/charts/paas-kuzzle/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.2.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -26,4 +26,10 @@ appVersion: "1.16.0"
 dependencies:
   - name: kuzzle
     version: 0.1.0
-    repository: "https://kuzzleio.github.io/helm-charts"
+    repository: "https://kuzzleio.github.io/helm-charts/"
+  - name: elasticsearch
+    version: 7.11.1
+    repository: https://helm.elastic.co/
+  - name: redis
+    version: 13.0.1
+    repository: https://charts.bitnami.com/bitnami/
