--- a/charts/paas-webapp/templates/certificate.yaml
+++ b/charts/paas-webapp/templates/certificate.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.certificate.enabled }}
-apiVersion: cert-manager.io/v1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: {{ .Values.certificate.host }}
