fix wrong name in secret template

--- a/charts/paas-webapp/templates/secret.yaml
+++ b/charts/paas-webapp/templates/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: webapp-docker
+  name: {{ .Values.ingress.name }}
   namespace: {{ .Values.ingress.namespace }}
 data:
   .dockerconfigjson: >-
