Fix issue with secret templated file

--- a/charts/paas-kuzzle/templates/secret.yaml
+++ b/charts/paas-kuzzle/templates/secret.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: kuzzle-docker
-  namespace: {{ .Values.ingress.namespace }}
+  name: {{ .Values.secret.name }}
+  namespace: {{ .Values.secret.namespace }}
 data:
   .dockerconfigjson: >-
     {{ .Values.secret.dockerconfigjson }}
