--- a/charts/paas-kuzzle/values.yaml
+++ b/charts/paas-kuzzle/values.yaml
@@ -42,6 +42,8 @@ kuzzle:
 
 secret:
   enabled: true
+  name: kuzzle-secret
+  namespace: default
   dockerconfigjson: ewogICJhdXRocyI6IHsKICAgICJyZWdpc3RyeSI6IHsKICAgICAgImF1dGgiOiAiWVdSdGFXNDZjR0Z6YzNkdmNtUT0iCiAgICB9CiAgfQp9
 
 certificate:
