--- a/charts/paas-kuzzle/Chart.yaml
+++ b/charts/paas-kuzzle/Chart.yaml
@@ -15,13 +15,13 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: "0.3.1"
+version: 0.4.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+appVersion: 1.16.0
 
 dependencies:
   - name: kuzzle
@@ -31,5 +31,5 @@ dependencies:
     version: 7.11.1
     repository: https://helm.elastic.co/
   - name: redis
-    version: 13.0.1
+    version: 16.12.2
     repository: https://charts.bitnami.com/bitnami/
