Add new secret for aws route53 secret key

--- a/charts/paas-kuzzle/templates/ingress.yaml
+++ b/charts/paas-kuzzle/templates/ingress.yaml
@@ -4,6 +4,10 @@ kind: IngressRoute
 metadata:
   name: {{ .Values.ingress.name }}
   namespace: {{ .Values.ingress.namespace }}
+  {{- with .Values.ingress.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   {{- with .Values.ingress.entryPoints }}
   entryPoints:
