--- a/charts/paas-webapp/values.yaml
+++ b/charts/paas-webapp/values.yaml
@@ -15,6 +15,14 @@ webapp:
       port: 80
       targetPort: 80
 
+
+secretRoute53:
+  enabled: true
+  name: route53-secret
+  namespace: default
+  secret_key: bXktc3VwZXItc2VjcmV0LWtleQ==
+
+
 secret:
   enabled: true
   name: webapp-secret
@@ -36,6 +44,10 @@ ingress:
 
   name: webapp
   namespace: default
+
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-dns"
+    certmanager.k8s.io/acme-challenge-type: dns01
 
   entrypoints:
     - websecure
