fix issue with wrong kind

--- a/charts/paas-kuzzle/values.yaml
+++ b/charts/paas-kuzzle/values.yaml
@@ -63,7 +63,7 @@ secret:
 certificate:
   enabled: true
 
-  issuer: letsencrypt
+  issuer: letsencrypt-dns
   host: kuzzle.test
   namespace: default
   name: kuzzle
