Add helm repo add codecentric to the list

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
           helm repo add kuzzle https://kuzzleio.github.io/helm-charts/
           helm repo add elastic https://helm.elastic.co/
           helm repo add bitnami https://charts.bitnami.com/bitnami/
+          helm repo add codecentric https://codecentric.github.io/helm-charts/
           helm repo update
 
       - name: Run chart-releaser
