--- a/charts/paas-keycloak/Chart.yaml
+++ b/charts/paas-keycloak/Chart.yaml
@@ -26,4 +26,4 @@ appVersion: "2"
 dependencies:
   - name: keycloak
     version: 18.1.1
-    repository: https://codecentric.github.io/helm-charts
+    repository: https://codecentric.github.io/helm-charts/
