--- a/charts/iot-console/Chart.yaml
+++ b/charts/iot-console/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: iot
+name: iot-console
 description: A web application
 
 # A chart can be either an 'application' or a 'library' chart.
