--- a/charts/iot-console/templates/tests/test-connection.yaml
+++ b/charts/iot-console/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "iot.fullname" . }}-test-connection"
+  name: "{{ include "iot-console.fullname" . }}-test-connection"
   labels:
-{{ include "iot.labels" . | nindent 4 }}
+{{ include "iot-console.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "iot.fullname" . }}:{{ .Values.service.port }}']
+      args:  ['{{ include "iot-console.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
