--- a/charts/paas-kuzzle/templates/ingressTCP.yaml
+++ b/charts/paas-kuzzle/templates/ingressTCP.yaml
@@ -2,23 +2,23 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRouteTCP
 metadata:
-  name: {{ .Values.ingress.name }}
-  namespace: {{ .Values.ingress.namespace }}
-  {{- with .Values.ingress.annotations }}
+  name: {{ .Values.ingressTCP.name }}
+  namespace: {{ .Values.ingressTCP.namespace }}
+  {{- with .Values.ingressTCP.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.ingress.entryPoints }}
+  {{- with .Values.ingressTCP.entryPoints }}
   entryPoints:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{- with .Values.ingress.routes }}
+  {{- with .Values.ingressTCP.routes }}
   routes:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{- if .Values.ingress.tls.enabled }}
+  {{- if .Values.ingressTCP.tls.enabled }}
   tls:
-    secretName: {{ .Values.ingress.tls.secretName }}
+    secretName: {{ .Values.ingressTCP.tls.secretName }}
   {{- end }}
 {{- end }}
