--- a/charts/webapp/values.yaml
+++ b/charts/webapp/values.yaml
@@ -23,6 +23,13 @@ service:
     port: 80
     targetPort: 80
 
+# Configure extra entrypoints
+extraEntrypoints:
+  - name: mqtt
+    port: 1883
+    targetPort: 1883
+    protocol: TCP
+
 args: []
 command: []
 extraEnvs: []
