--- a/charts/chirpstack/templates/chirpstack-rest-api/service.yaml
+++ b/charts/chirpstack/templates/chirpstack-rest-api/service.yaml
@@ -9,9 +9,9 @@ spec:
   type: ClusterIP
   ports:
     - port: {{ .Values.chirpstackRestApi.http.port }}
-      targetPort: {{ .Values.chirpstackRestApi.http.targetPort }}
+      targetPort: api
       protocol: TCP
-      name: http
+      name: api
   selector:
     {{- include "chirpstack.selectorLabels" . | nindent 4 }}
     component: restApi
