--- a/charts/chirpstack/templates/chirpstack-rest-api/service.yaml
+++ b/charts/chirpstack/templates/chirpstack-rest-api/service.yaml
@@ -9,7 +9,7 @@ spec:
   type: ClusterIP
   ports:
     - port: {{ .Values.chirpstackRestApi.http.port }}
-      targetPort: api
+      targetPort: {{ .Values.chirpstackRestApi.http.containerPort }}
       protocol: TCP
       name: api
   selector:
