feat: add custom config files to chirpstack chart

--- a/charts/chirpstack/templates/chirpstack/cm.yaml
+++ b/charts/chirpstack/templates/chirpstack/cm.yaml
@@ -62,3 +62,7 @@ data:
           command_topic="{{ .Values.chirpstack.regions.eu868.mqtt.commandTopic }}"
 
           server="tcp://{{ .Values.chirpstack.regions.eu868.mqtt.host | default .Values.chirpstack.regions.mqtt.host }}:{{ .Values.chirpstack.regions.eu868.mqtt.port | default .Values.chirpstack.regions.mqtt.port }}"
+
+  {{- range $key, $value := .Values.chirpstack.extraConfigFiles }}
+  {{ $key | nindent 2 }}: | {{ $value | nindent 4 }}
+  {{- end }}
