--- a/charts/chirpstack/templates/chirpstack-rest-api/service.yaml
+++ b/charts/chirpstack/templates/chirpstack-rest-api/service.yaml
@@ -5,8 +5,15 @@ metadata:
   name: {{ include "chirpstack.restApi" . }}
   labels:
     {{- include "chirpstack.labels" . | nindent 4 }}
+  {{- with .Values.chirpstackRestApi.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
-  type: ClusterIP
+  type: {{ .Values.chirpstackRestApi.service.type }}
+  {{- with .Values.chirpstackRestApi.service.spec }}
+  {{- toYaml . | nindent 2 }}
+  {{- end }}
   ports:
     - port: {{ .Values.chirpstackRestApi.http.port }}
       targetPort: {{ .Values.chirpstackRestApi.http.containerPort }}
