refactor: rename chirpstack chart config map file

--- a/charts/chirpstack/templates/chirpstack/configmap.yaml
+++ b/charts/chirpstack/templates/chirpstack/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "chirpstack.core" . }}
+  name: {{ include "chirpstack.core" . }}
   labels:
     {{- include "chirpstack.labels" . | nindent 4 }}
 data:
