--- a/charts/chirpstack/templates/chirpstack/service.yaml
+++ b/charts/chirpstack/templates/chirpstack/service.yaml
@@ -20,4 +20,4 @@ spec:
       name: dashboard
   selector:
     {{- include "chirpstack.selectorLabels" . | nindent 4 }}
-    component: core
+    app.kubernetes.io/component: core
