--- a/charts/chirpstack/templates/chirpstack-rest-api/service.yaml
+++ b/charts/chirpstack/templates/chirpstack-rest-api/service.yaml
@@ -21,5 +21,5 @@ spec:
       name: api
   selector:
     {{- include "chirpstack.selectorLabels" . | nindent 4 }}
-    component: restApi
+    app.kubernetes.io/component: restApi
 {{- end }}
