--- a/charts/kuzzle/Chart.yaml
+++ b/charts/kuzzle/Chart.yaml
@@ -17,5 +17,7 @@ type: application
 version: 1.2.0
 
 # This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application.
-appVersion: 2.28.0
+# incremented each time you make changes to the application. Versions are not expected to
+# follow Semantic Versioning. They should reflect the version the application is using.
+# It is recommended to use it with quotes.
+appVersion: "2.28.0"
