--- a/charts/chirpstack/values.yaml
+++ b/charts/chirpstack/values.yaml
@@ -35,7 +35,7 @@ chirpstack:
     pullPolicy: IfNotPresent
     tag: ""
 
-  # Secret contenting chirpstack.toml file
+  # Secret containing chirpstack.toml file
   existingChirpstackConfigSecret: ""
 
   # Configuration for connecting to the PostgreSQL database
