--- a/charts/chirpstack/templates/chirpstack/deployment.yaml
+++ b/charts/chirpstack/templates/chirpstack/deployment.yaml
@@ -46,6 +46,9 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /etc/chirpstack
+            {{- if .Values.chirpstack.extraVolumeMounts }}
+              {{- toYaml .Values.chirpstack.extraVolumeMounts | nindent 12 }}
+            {{- end }}
           ports:
             - name: dashboard
               containerPort: {{ .Values.chirpstack.http.containerPort }}
@@ -69,6 +72,9 @@ spec:
         - name: config
           configMap:
             name: {{ template "chirpstack.core" . }}
+        {{- if .Values.chirpstack.extraVolumes }}
+          {{- toYaml .Values.chirpstack.extraVolumes | nindent 8 }}
+        {{- end }}
       {{- with .Values.chirpstack.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
