--- a/charts/kuzzle/templates/deployment.yaml
+++ b/charts/kuzzle/templates/deployment.yaml
@@ -36,10 +36,11 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
 
       # Init containers
-      {{ if .Values.extraInitContainers }}
+      {{- if .Values.extraInitContainers }}
       initContainers:
         {{- toYaml .Values.extraInitContainers | nindent 8 }}
-      {{ end }}
+      {{- end }}
+
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -77,14 +78,27 @@ spec:
         {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+
+      {{- if .Values.topologySpreadConstraints.enabled }}
+      topologySpreadConstraints:
+        - maxSkew: {{ .Values.topologySpreadConstraints.maxSkew | default 1 }}
+          topologyKey: {{ .Values.topologySpreadConstraints.topologyKey | default "kubernetes.io/hostname" | quote }}
+          whenUnsatisfiable: {{ .Values.topologySpreadConstraints.whenUnsatisfiable | default "DoNotSchedule" }}
+          labelSelector:
+            matchLabels:
+{{ include "kuzzle.selectorLabels" . | nindent 14 }}
+      {{- end }}
+
     {{- with .Values.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+
     {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
